--- a/src/pages/install-wsl.astro
+++ b/src/pages/install-wsl.astro
@@ -1,3 +1,7 @@
-<div>
-    Install wsl
-</div>
+---
+import Layout from "../layouts/Layout.astro";
+---
+
+<Layout>
+  <div>Install wsl</div>
+</Layout>
