fix: remove redundant font-family

--- a/src/pages/install-wsl.astro
+++ b/src/pages/install-wsl.astro
@@ -1,3 +1,7 @@
+---
+import { InstallWSL } from "../components/pages/install-wsl";
+---
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,7 +18,7 @@
     />
     <title>Article - Install WSL</title>
   </head>
-  <body> <div>Install wsl</div> </body>
+  <body> <InstallWSL /> </body>
 </html>
 
 <style>
@@ -25,5 +29,6 @@
     height: 100%;
     background-color: #282b30;
     color: rgba(255, 255, 255, 0.87);
+    font-family: "Nunito", sans-serif;
   }
 </style>
