feat: add content wrapper styling on article

--- a/src/pages/install-wsl.astro
+++ b/src/pages/install-wsl.astro
@@ -30,5 +30,7 @@ import { InstallWSL } from "../components/pages/install-wsl";
     background-color: #282b30;
     color: rgba(255, 255, 255, 0.87);
     font-family: "Nunito", sans-serif;
+    display: flex;
+    justify-content: center;
   }
 </style>
