feat: add raw git-setup page

--- a/src/pages/git-setup.astro
+++ b/src/pages/git-setup.astro
@@ -1,5 +1,5 @@
 ---
-import { InstallWSLArticle } from "../components/pages/install-wsl";
+import { GitSetupArticle } from "../components/pages/git-setup";
 ---
 
 <html lang="en">
@@ -16,9 +16,9 @@ import { InstallWSLArticle } from "../components/pages/install-wsl";
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>Article - Install WSL</title>
+    <title>Article - Git Setup</title>
   </head>
-  <body> <InstallWSLArticle /> </body>
+  <body> <GitSetupArticle /> </body>
 </html>
 
 <style>
