--- a/src/components/code-block.css
+++ b/src/components/code-block.css
@@ -9,7 +9,12 @@
 }
 
 .code-block {
+  margin: 1rem 0;
   border: thin solid gray;
   display: flex;
   flex-direction: column;
+}
+
+code {
+  color: orange;
 }
