feat: add empty page for wip articles

--- a/src/pages/aseprite.astro
+++ b/src/pages/aseprite.astro
@@ -1,5 +1,5 @@
 ---
-import { InstallWSLArticle } from "../components/pages/install-wsl";
+import { EmptyPage } from "../components/pages/empty-page";
 ---
 
 <html lang="en">
@@ -18,7 +18,7 @@ import { InstallWSLArticle } from "../components/pages/install-wsl";
     />
     <title>Article - Aseprite</title>
   </head>
-  <body> <InstallWSLArticle /> </body>
+  <body> <EmptyPage /> </body>
 </html>
 
 <style>
