feat: add intro content for aeromodelling article

--- a/src/pages/basic-aeromodelling.astro
+++ b/src/pages/basic-aeromodelling.astro
@@ -1,5 +1,5 @@
 ---
-import { EmptyPage } from "../components/pages/empty-page";
+import { BasicAeromodellingArticle } from "../components/pages/basic-aeromodelling";
 ---
 
 <html lang="en">
@@ -18,7 +18,7 @@ import { EmptyPage } from "../components/pages/empty-page";
     />
     <title>Article - Basic Aeromodelling</title>
   </head>
-  <body> <EmptyPage /> </body>
+  <body> <BasicAeromodellingArticle /> </body>
 </html>
 
 <style>
