--- a/src/components/sections/styles/hero.css
+++ b/src/components/sections/styles/hero.css
@@ -7,15 +7,26 @@
 .hero-page-container {
   position: absolute;
   width: 90%;
-  top: 45%;
   -ms-transform: translateY(-45%);
   transform: translateY(-45%);
+}
+
+.icons-div {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  color: white;
+}
+
+.icon-link {
+  color: white;
 }
 
 /* ≥ 320px: mobile size */
 @media (min-width: 320px) {
   .hero-page-container {
     margin: 0 2rem 0 2rem;
+    top: 40%;
   }
 }
 
@@ -26,6 +37,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    top: 45%;
   }
 }
 
