feat: add anime drawing article

--- a/src/pages/anime-drawing.astro
+++ b/src/pages/anime-drawing.astro
@@ -1,5 +1,5 @@
 ---
-import { EmptyPage } from "../components/pages/empty-page";
+import { AnimeDrawingArticle } from "../components/pages/anime-drawing";
 ---
 
 <html lang="en">
@@ -18,7 +18,7 @@ import { EmptyPage } from "../components/pages/empty-page";
     />
     <title>Article - Anime Drawing</title>
   </head>
-  <body> <EmptyPage /> </body>
+  <body> <AnimeDrawingArticle /> </body>
 </html>
 
 <style>
