feat: change anime-drawing article to vuejs

--- a/src/pages/anime-drawing.astro
+++ b/src/pages/anime-drawing.astro
@@ -1,5 +1,5 @@
 ---
-import { AnimeDrawingArticle } from "../components/pages/reactjs/anime-drawing";
+import AnimeDrawingArticle from "../components/pages/vuejs/AnimeDrawing.vue";
 ---
 
 <html lang="en">
