--- a/src/components/sections/styles/anime-recommendation.css
+++ b/src/components/sections/styles/anime-recommendation.css
@@ -1,9 +1,12 @@
 .anime-recommendation {
   height: 100vh;
   display: flex;
+  display: -webkit-flex;
   flex-direction: column;
   justify-content: center;
+  -webkit-justify-content: center;
   align-items: center;
+  -webkit-align-items: center;
 }
 
 .anime-recommendation-wrapper {
