--- a/src/components/sections/styles/hero.css
+++ b/src/components/sections/styles/hero.css
@@ -1,6 +1,11 @@
 .hero {
   height: 100vh;
-  width: 100%;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+  align-items: center;
+  -webkit-align-items: center;
   position: relative;
 }
 
