--- a/src/components/sections/styles/articles.css
+++ b/src/components/sections/styles/articles.css
@@ -7,13 +7,12 @@
 }
 
 .articles-container {
-  height: 85vh;
+  height: 70vh;
   background-color: #424549;
   display: flex;
   flex-flow: row wrap;
   border-radius: 20px;
-  overflow: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   gap: 1rem;
   padding: 1rem 0;
 }
