--- a/src/components/sections/styles/anime-recommendation.css
+++ b/src/components/sections/styles/anime-recommendation.css
@@ -11,7 +11,7 @@
 
 .anime-recommendation-wrapper {
   width: 90%;
-  background-color: #424549;
+  background-color: rgba(66, 69, 73, 0.2);
   display: flex;
   flex-direction: row;
   border-radius: 20px;
