--- a/src/components/sections/styles/articles.css
+++ b/src/components/sections/styles/articles.css
@@ -8,11 +8,12 @@
 
 .articles-container {
   height: 70vh;
-  background-color: #424549;
+  background-color: rgba(66, 69, 73, 0.2);
   display: flex;
   flex-flow: row wrap;
   border-radius: 20px;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   gap: 1rem;
   padding: 1rem 0;
 }
