--- a/src/components/sections/styles/hiragana-quiz.css
+++ b/src/components/sections/styles/hiragana-quiz.css
@@ -8,7 +8,7 @@
 
 .hiragana-quiz-container {
   height: auto;
-  background-color: #424549;
+  background-color: rgba(66, 69, 73, 0.2);
   display: flex;
   flex-flow: row wrap;
   border-radius: 20px;
