feat: change background on sections item div

--- a/src/components/sections/styles/articles.css
+++ b/src/components/sections/styles/articles.css
@@ -20,7 +20,7 @@
 
 .article-card {
   margin: 0.5rem 2rem;
-  background-color: gray;
+  background-color: rgba(110, 113, 116, 0.2);
   border-radius: 1rem;
   width: 100%;
   color: white;
