--- a/src/components/App.css
+++ b/src/components/App.css
@@ -214,12 +214,19 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+
+button:hover:not([disabled]) {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+button[disabled="disabled"],
+button:disabled {
+  cursor: not-allowed;
 }
 
 @media (prefers-color-scheme: light) {
