--- a/src/components/App.css
+++ b/src/components/App.css
@@ -210,9 +210,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+}
+
+.transparent-button {
+  background-color: transparent;
 }
 
 button:hover:not([disabled]) {
