--- a/src/components/sections/styles/anime-recommendation.css
+++ b/src/components/sections/styles/anime-recommendation.css
@@ -91,7 +91,8 @@
 }
 
 .arrow-button {
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.4);
+  height: 5rem;
 }
 .arrow-button:active,
 .arrow-button:focus {
