--- a/src/components/sections/styles/anime-recommendation.css
+++ b/src/components/sections/styles/anime-recommendation.css
@@ -11,10 +11,12 @@
 
 .anime-recommendation-wrapper {
   width: 90%;
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
   background-color: rgba(66, 69, 73, 0.2);
+  border-radius: 20px;
   display: flex;
   flex-direction: row;
-  border-radius: 20px;
   margin: 1rem 0;
 }
 
@@ -27,7 +29,9 @@
 }
 
 .anime-list-item {
-  background-color: rgba(110, 113, 116, 0.2);
+  background-color: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
   padding: 1rem;
   display: flex;
   align-items: center;
