--- a/src/components/sections/styles/articles.css
+++ b/src/components/sections/styles/articles.css
@@ -8,7 +8,10 @@
 
 .articles-container {
   height: 70vh;
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
   background-color: rgba(66, 69, 73, 0.2);
+  border-radius: 20px;
   display: flex;
   flex-flow: row wrap;
   border-radius: 20px;
@@ -20,7 +23,10 @@
 
 .article-card {
   margin: 0.5rem 2rem;
-  background-color: rgba(110, 113, 116, 0.2);
+  background-color: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+
   border-radius: 1rem;
   width: 100%;
   color: white;
