--- a/src/components/App.css
+++ b/src/components/App.css
@@ -144,11 +144,11 @@
 }
 
 .card-title-container {
+  position: absolute;
+  bottom: -1px; /* if absolutely positioned */
+  left: 0;
+  right: 0;
   padding: 0.5rem;
-  align-self: flex-end;
-  width: 100%;
-  height: auto;
-  background-color: rgba(0, 0, 0, 0.5);
   background: linear-gradient(to bottom, transparent 0%, #1e2124 100%);
 }
 
@@ -165,6 +165,8 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  position: relative;
+  overflow: hidden;
 }
 
 .anime-recommendation-img {
