feat: change hero title

--- a/src/components/sections/styles/hero.css
+++ b/src/components/sections/styles/hero.css
@@ -16,6 +16,11 @@
   transform: translateY(-45%);
 }
 
+.hero-title {
+  width: 60%;
+  margin-right: 6rem;
+}
+
 .icons-div {
   display: flex;
   flex-direction: row;
