--- a/src/components/sections/styles/articles.css
+++ b/src/components/sections/styles/articles.css
@@ -8,28 +8,25 @@
 
 .articles-container {
   height: 70vh;
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: rgba(66, 69, 73, 0.2);
-  border-radius: 20px;
   display: flex;
   flex-flow: row wrap;
-  border-radius: 20px;
   overflow-x: hidden;
   overflow-y: auto;
-  gap: 1rem;
-  padding: 1rem 0;
 }
 
 .article-card {
-  margin: 0.5rem 2rem;
-  background-color: rgba(255, 255, 255, 0.05);
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
-
-  border-radius: 1rem;
+  padding: 0.5rem 2rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+  transition: background 0.3s ease, transform 0.3s ease;
   width: 100%;
   color: white;
+}
+
+.article-card:hover {
+  background: rgba(66, 69, 73, 0.2);
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  transform: translateX(4px);
 }
 
 .content-wrapper {
