--- a/src/components/section-bar.css
+++ b/src/components/section-bar.css
@@ -7,7 +7,16 @@
 .section-bar {
   height: 4rem;
   width: 0.5rem;
-  background-color: gray;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 1rem;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.section-bar:hover {
+  height: 4rem;
+  width: 0.5rem;
+  background-color: rgba(255, 255, 255, 0.5);
   margin: 1rem;
   border-radius: 10px;
   cursor: pointer;
