feat: change app.tsx background that looks 1000% better

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -85,6 +85,7 @@
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
   touch-action: none;
+  color: white;
 }
 
 .icon {
