--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,5 +64,6 @@ import App from "../components/App.tsx";
     width: 100%;
     height: 100%;
     min-height: 100vh;
+    color: rgba(255, 255, 255, 0.87);
   }
 </style>
