--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ import App from "../components/App.tsx";
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://gelembungsahabat.github.io/images/makeine.jpg"
+      content="https://gelembungsahabat.github.io/images/preview.png"
     />
 
     <!-- Twitter Card -->
@@ -46,7 +46,7 @@ import App from "../components/App.tsx";
     />
     <meta
       name="twitter:image"
-      content="https://gelembungsahabat.github.io/images/makeine.jpg"
+      content="https://gelembungsahabat.github.io/images/preview.png"
     />
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
